--- a/code_manipulate1/pom.xml
+++ b/code_manipulate1/pom.xml
@@ -20,7 +20,13 @@
             <version>4.8.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.3.0</version>
+        </dependency>
     </dependencies>
+
 
     <build>
         <plugins>
